--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,8 +9,8 @@
   "d1_databases": [
     {
       "binding": "DB",
-      "database_name": "trader-advisor-db",
-      "database_id": ""
+      "database_name": "webapp-production",
+      "database_id": "local-dev-db"
     }
   ],
 
