--- a/public/static/manifest.json
+++ b/public/static/manifest.json
@@ -1,16 +1,28 @@
 {
   "name": "Real-Time Trader Advisor",
-  "short_name": "TraderAdvisor", 
-  "description": "AI-powered trading recommendations and portfolio management",
+  "short_name": "TraderAI",
+  "description": "AI-powered trading recommendations with multi-channel notifications",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#2563eb",
+  "theme_color": "#3B82F6",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/static/favicon.ico",
-      "sizes": "16x16 32x32",
-      "type": "image/x-icon"
+      "src": "/static/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/static/icon-512.png", 
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
-  ]
+  ],
+  "permissions": [
+    "notifications"
+  ],
+  "categories": ["finance", "productivity", "business"]
 }
