🎉 Complete Push Notifications System Implementation
✅ Major Features Added:
- Full push notifications with Service Worker & VAPID keys
- Multi-channel notification system (Push → Email → Telegram)
- Robust error handling and fallback mechanisms
- Enhanced user experience with clear status messages

🔧 Technical Improvements:
- Fixed database ON CONFLICT errors in user_preferences table
- Added web-push package for real push notification sending
- Implemented proper Service Worker registration and management
- Added comprehensive logging and debugging capabilities

📱 Push Notifications:
- VAPID keys generated and configured
- Service Worker properly handles push subscriptions
- Browser notifications working with Google FCM
- Graceful fallback if Service Worker fails

💾 Database Fixes:
- Replaced problematic ON CONFLICT(user_id) queries
- Implemented check-then-insert/update pattern
- Fixed both savePushSubscription and preferences endpoints

📧 Email System Ready:
- Resend API integration implemented (awaiting API key)
- HTML email templates with professional styling
- 3000 free emails per month capacity

📋 Updated Documentation:
- Comprehensive README with current status
- API endpoints documentation
- User guide for all notification methods
- Clear next steps for deployment

Status: Push notifications fully working, email system code-complete

--- a/package.json
+++ b/package.json
@@ -24,19 +24,20 @@
     "git:log": "git log --oneline"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "hono": "^4.9.7",
     "hono-rate-limiter": "^0.4.0",
-    "bcryptjs": "^2.4.3",
-    "zod": "^3.23.0",
-    "jose": "^5.8.0"
+    "jose": "^5.8.0",
+    "web-push": "^3.6.7",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20240909.0",
     "@hono/vite-build": "^1.2.0",
     "@hono/vite-dev-server": "^0.18.2",
-    "vite": "^6.3.5",
-    "wrangler": "^4.4.0",
-    "@cloudflare/workers-types": "^4.20240909.0",
     "@types/bcryptjs": "^2.4.6",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^6.3.5",
+    "wrangler": "^4.4.0"
   }
 }
